# rate_limiter_nif

./: .gitignore  README.md  rebar.config
config/: test.config
crates/: build_crates.sh
crates/rate_limiter/: Cargo.toml  build.rs  libpath
crates/rate_limiter/benches/: bench.rs
crates/rate_limiter/src/: lib.rs  nif.rs
crates/rate_limiter/tests/: rate_limiter_test.rs
src/: rate_limiter_nif.app.src  rate_limiter_nif.app.src.script  rate_limiter_nif.erl  rate_limiter_nif_app.erl  rate_limiter_nif_sup.erl
test/ct/: rate_limiter_nif_SUITE.erl
test/eunit/: rate_limiter_nif_test.erl
