[package]
name = "rate_limiter"
version = "0.1.0"
authors = ["yangcancai <yangcancai0112@gmail.com>"]
license = "MIT/Apache-2.0 2021"
build = "build.rs"

[lib]
name = "rate_limiter"
crate-type = ["cdylib","rlib"]

[[bench]]
name = "bench"
harness = false

[dependencies]
rustler = "0.22.0-rc.0"
serde = { version = "1.0", features = ["derive"] }
bencher = "0.1.5"
rate_limiter = { git="https://github.com/yangcancai/rate_limiter.git", branch = "master"}
